画像パス修正

--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,6 +1,6 @@
 
 <section class="main-header">
-  <img src="images-master/achieve.png">
+  <img src="<%= asset_path "achieve.png" %>">
 </section>
 
 <div id="page-top-btn" class="page-top-btn">
